<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- "Mark Favorite", should appear as action button if possible -->

    <item
        android:id="@+id/action_undo"
        android:icon="@drawable/ic_undo"
        android:title="@string/action_undo"
        android:onClick="onUndoClick"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_restart"
        android:icon="@drawable/ic_restart"
        android:onClick="onRestartClick"
        android:title="@string/action_restart"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_list"
        android:icon="@drawable/ic_list"
        android:onClick="openList"
        android:title="@string/action_list"
        app:showAsAction="always" />

    <!-- Settings, should always be in the overflow -->


</menu>

